Fix: remove absolut panel style to fix the align feature of dropdown

--- a/src/CascadeMultiSelect.less
+++ b/src/CascadeMultiSelect.less
@@ -191,7 +191,7 @@
 @notificationPrefixCls: kuma-cascade-multi;
 
 .@{notificationPrefixCls}-select-panel-content {
-  position: absolute;
+  position: relative;
 }
 
 .@{notificationPrefixCls}-input {
